k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: anchitpatil/cart-service:latest
        ports:
        - containerPort: 3003
        readinessProbe:
          httpGet:
            path: /health
            port: 3003
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
    app: cart
spec:
  type: NodePort
  selector:
    app: cart
  ports:
  - name: http
    port: 80
    targetPort: 3003
    nodePort: 30083
