k8s/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: anchitpatil/order-service:latest
        ports:
        - containerPort: 3004
        readinessProbe:
          httpGet:
            path: /health
            port: 3004
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order
spec:
  type: NodePort
  selector:
    app: order
  ports:
  - name: http
    port: 80
    targetPort: 3004
    nodePort: 30084
